Fixed bug where icons were misaligned

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,7 @@ ul{
 
 .sidenav a, .dropdown-btn{
   color: var(--primary-text-colour);
-  padding-left: 10px;
+  padding-left: 15px;
   text-decoration: none;
   font-size: 16px;
   display: inline-block;
@@ -101,6 +101,10 @@ ul{
   line-height: 50px;
 }
 
+.sidenav-text-container{
+  padding-left: 40px;
+}
+
 .sidenav a:hover, .dropdown-btn:hover {
   color: var(--secondary-text-colour);
   background-color: var(--secondary-colour);
@@ -108,9 +112,8 @@ ul{
 
 .sidenav .fas, .sidenav .fab{
   color: var(--primary-text-colour);
+  position: absolute;
   font-size: 20px;
-  padding-left: 5px;
-  padding-right: 10px;
   float: left;
 }
 
@@ -359,8 +362,8 @@ input[type=text]:focus{
     background-color: var(--tertiary-colour);
     top: 0;
     left: 0;
-    height:75px;
-    width:100%;
+    height:  75px;
+    width: 100%;
     position: absolute;
     z-index: 3;
   }
@@ -418,7 +421,7 @@ input[type=text]:focus{
 
   .mobile-sidenav a{
     color: var(--primary-text-colour);
-    padding-left: 10px;
+    padding-left: 15px;
     text-decoration: none;
     font-size: 16px;
     display: block;
